Updated index and added admin, merchant and support page
These sites currently in a demo stage and are only used as placeholders as for now

--- a/src/main/resources/templates/merchant.html
+++ b/src/main/resources/templates/merchant.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Anti Fraud System</title>
+    <title>Merchant view - Anti Fraud System</title>
     <link rel="stylesheet" type="text/css" th:href="@{../styles/indexStyle.css}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela+Round">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
@@ -98,6 +98,9 @@
         </div>
     </div>
 </nav>
+
+<!--Main content-->
+<h1><i>Site under construction...</i></h1>
 
 <script type="text/javascript" th:src="@{../scripts/sendObject.js}"></script>
 <script type="text/javascript" th:src="@{../scripts/handleSideBar.js}"></script>
