Udpated styling and content of the index page

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Administration - Anti Fraud System</title>
-    <link rel="stylesheet" type="text/css" th:href="@{../styles/indexStyle.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{../styles/mainStyle.css}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela+Round">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -110,7 +110,7 @@
                 </div>
                 <div class="user-info">
                     <!--TODO: Update user name and role according to the currently logged in admin user-->
-                    <span class="user-name">John<strong>Doe</strong></span>
+                    <span class="user-name">John <strong>Doe</strong></span>
                     <span class="user-role">Administrator</span>
                     <span class="user-status">
             <i class="fa fa-circle"></i>
@@ -274,7 +274,7 @@
                         of REST endpoints responsible for interacting with users, and an internal transaction validation
                         logic based on a set of heuristic rules.</p>
                     <p> You can find the complete code on
-                        <a href="https://github.com/dan-koller/Spring-Anti-Fraud-System" target="_blank">Github</a></p>
+                        <a href="https://github.com/dan-koller/Spring-Anti-Fraud-System" target="_blank">Github</a>.</p>
                 </div>
                 <div class="form-group col-md-12">
                     <div class="alert alert-success" role="alert">
@@ -325,7 +325,7 @@
                 <div>
                     <a href="https://github.com/dan-koller" target="_blank">
                         <img alt="GitHub followers"
-                             src="https://img.shields.io/github/followers/azouaoui-med?label=github&style=social"/>
+                             src="https://img.shields.io/github/followers/dan-koller?label=github&style=social"/>
                     </a>
                 </div>
             </footer>
@@ -335,6 +335,7 @@
 </div>
 
 <!-- page-wrapper -->
+<!--TODO: Fix scripts that cause errors with bootstrap navbar-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
