--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Anti Fraud System</title>
+    <link rel="stylesheet" type="text/css" th:href="@{../styles/mainStyle.css}">
     <link rel="stylesheet" type="text/css" th:href="@{../styles/indexStyle.css}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela+Round">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
@@ -17,7 +18,7 @@
 <body>
 <!--Add a navbar-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a href="#" class="navbar-brand"><b>Anti Fraud System</b></a>
+    <a href="/web/" class="navbar-brand"><b>Anti Fraud System</b></a>
     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -26,16 +27,20 @@
         <div class="navbar-nav">
             <a href="#" class="nav-item nav-link">Home</a>
             <a href="#" class="nav-item nav-link">About</a>
-            <div class="nav-item dropdown">
-                <a href="#" data-toggle="dropdown" class="nav-item nav-link dropdown-toggle">Services</a>
-                <div class="dropdown-menu">
-                    <a href="/web/merchant" class="dropdown-item">Merchant view</a>
-                    <a href="/web/support" class="dropdown-item">Support view</a>
-                    <a href="/web/admin" class="dropdown-item">Administration</a>
+            <div class="navbar-nav">
+                <a href="/web/" class="nav-item nav-link">Home</a>
+                <a href="/web/about/" class="nav-item nav-link">About</a>
+                <div class="nav-item dropdown">
+                    <a href="#" data-toggle="dropdown" class="nav-item nav-link dropdown-toggle">Services</a>
+                    <div class="dropdown-menu">
+                        <a href="/web/merchant" class="dropdown-item">Merchant view</a>
+                        <a href="/web/support" class="dropdown-item">Support view</a>
+                        <a href="/web/admin" class="dropdown-item">Administration</a>
+                    </div>
                 </div>
+                <a href="/web/pricing/" class="nav-item nav-link active">Pricing</a>
+                <a href="/web/contact" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="#" class="nav-item nav-link active">Pricing</a>
-            <a href="#" class="nav-item nav-link">Contact</a>
         </div>
         <form class="navbar-form form-inline">
             <div class="input-group search-box">
@@ -99,8 +104,91 @@
     </div>
 </nav>
 
+<div class="page-wrapper chiller-theme toggled">
+    <main class="page-content">
+        <div class="container-fluid">
+            <h2>Anti-Fraud System</h2>
+            <hr>
+            <div class="row">
+                <div class="form-group col-md-12">
+                    <p>This project demonstrates (in a simplified form) the principles of anti-fraud systems in the
+                        financial sector. For this project, we will work on a system with an expanded role model, a set
+                        of REST endpoints responsible for interacting with users, and an internal transaction validation
+                        logic based on a set of heuristic rules.</p>
+                    <p> You can find the complete code on
+                        <a href="https://github.com/dan-koller/Spring-Anti-Fraud-System" target="_blank">Github</a>.</p>
+                </div>
+                <div class="form-group col-md-12">
+                    <div class="alert alert-success" role="alert">
+                        <h4 class="alert-heading">New!</h4>
+                        <p>New messages or notifications can be posted here</p>
+                        <a href="https://github.com/dan-koller/Spring-Anti-Fraud-System" target="_blank"
+                           class="btn btn-sm btn-primary mr-2">Github</a>
+                        <a href="#" target="_blank"
+                           class="btn btn-sm btn-success">Demo</a>
+                    </div>
+
+                </div>
+            </div>
+            <h5>More projects</h5>
+            <hr>
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                    <div class="card rounded-0 p-0 shadow-sm">
+                        <img src="https://dan-koller.github.io/src/images/api-coding.jpg"
+                             class="card-img-top rounded-0" alt="Angular pro sidebar">
+                        <div class="card-body text-center">
+                            <h6 class="card-title">Accounting Service</h6>
+                            <a href="https://github.com/dan-koller/Spring-Accounting-Service" target="_blank"
+                               class="btn btn-primary btn-sm">Github</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                    <div class="card rounded-0 p-0 shadow-sm">
+                        <img src="https://raw.githubusercontent.com/dan-koller/Spring-Code-Sharing-Platform/main/img.png"
+                             class="card-img-top rounded-0" alt="Angular pro sidebar">
+                        <div class="card-body text-center">
+                            <h6 class="card-title">Code Sharing Platform</h6>
+                            <a href="https://github.com/dan-koller/Spring-Code-Sharing-Platform" target="_blank"
+                               class="btn btn-primary btn-sm">Github</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+
+            <footer class="text-center">
+                <div class="mb-2">
+                    <small id="copyright-footer">
+                        © Dan Koller
+                    </small>
+                </div>
+                <div>
+                    <a href="https://github.com/dan-koller" target="_blank">
+                        <img alt="GitHub followers"
+                             src="https://img.shields.io/github/followers/dan-koller?label=github&style=social"/>
+                    </a>
+                </div>
+            </footer>
+        </div>
+    </main>
+    <!-- page-content" -->
+</div>
+
+<!-- page-wrapper -->
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"-->
+<!--        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"-->
+<!--        crossorigin="anonymous"></script>-->
+<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"-->
+<!--        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"-->
+<!--        crossorigin="anonymous"></script>-->
+
+<!--Custom scripts-->
 <script type="text/javascript" th:src="@{../scripts/sendObject.js}"></script>
 <script type="text/javascript" th:src="@{../scripts/handleSideBar.js}"></script>
+<script type="text/javascript" th:src="@{../scripts/footerText.js}"></script>
 
 </body>
 </html>
